# fastup

./: .env.example  .gitignore  .pre-commit-config.yaml  ERD.drawio  Makefile  Procfile  README.md  TODO.md  UML.drawio  config.toml  confile.toml  confile.yaml  logging.toml  logging.yaml  makefile  pyproject.toml  pyrightconfig.json  readme.md  uml-diagram.drawio
alembic/: env.py
alembic/versions/: 21a6262584ad_users_table.py  2bb11d4615e4_users_table.py  a4e8ba3701c7_users_tbl.py  accc777487f0_users_tbl.py  ba3657bfdf09_add_temp_users.py  bac344118b5a_otps_table.py  effba65ae35e_otps_table.py
app/: main.py
app/adapters/: __init__.py  database.py  jwt_token_service.py  pwdlib_password_service.py  sqlalchemy_uow.py
app/adapters/concrete/: __init__.py
app/adapters/database/: __init__.py  database.py  engine.py  orm.py
app/adapters/orm/: mappings.py  tbls.py
app/adapters/sqlalchemy_repos/: __init__.py  user_sqlalchemy_repo.py
app/config/: __init__.py  parsers.py  resolvers.py  settings.py  types.py
app/domain/: errors.py  protocols.py
app/domain/base/: __init__.py  repo.py  uow.py
app/domain/dtos/: __init__.py  token_claims.py
app/domain/entities/: user.py
app/domain/handlers/: __init__.py  create_user_handler.py
app/domain/ports/: __init__.py  password_hash.py
app/domain/repositories/: user_repo.py
app/entrypoint/: deps.py  err_handlers.py  lifespan.py  request_models.py  response_models.py  routes.py  server.py
configs/: dev.toml
fastup/: app.py  bootstrap.py  config.py  main.py
fastup/adapters/: builtin_logger.py  database.py  orm.py  settings.py
fastup/adapters/concrete/: __init__.py  base_sql_repo.py  pwdlib_hasher.py  sql_uow.py
fastup/adapters/database/: __init__.py  engine.py  mapper.py
fastup/adapters/sql_repositories/: __init__.py  user_sql_repo.py
fastup/adapters/utils/: __init__.py  get_env.py  path_resolver.py  timeout_parser.py  toml_parser.py
fastup/api/: app.py  deps.py
fastup/api/routes/: __init__.py  meta.py
fastup/api/v1/: __init__.py  exc_handlers.py  meta.py  req_models.py  resp_models.py  routes.py
fastup/config/: __init__.py  config.py  parsers.py  types.py
fastup/core/: commands.py  config.py  database.py  enums.py  envlib.py  errors.py  events.py  exceptions.py  logger.py  protocols.py  settings.py  unit_of_work.py  utils.py
fastup/core/bus/: __init__.py  injector.py  message_bus.py  registry.py
fastup/core/entities/: __init__.py  base_entity.py  otp.py  user.py
fastup/core/handlers/: __init__.py  issue_signup_otp_handler.py  login_handler.py  send_otp_handler.py  signup_handler.py  verify_otp_handler.py
fastup/core/repositories/: __init__.py  base_repo.py  otp_repo.py  user_repo.py
fastup/core/services/: __init__.py  (+6 more)
fastup/domain/: enums.py  errors.py  exceptions.py  logger.py
fastup/entrypoints/: __init__.py  app.py  dependencies.py  lifespan.py  routes.py  worker.py
fastup/infra/: config.py  db.py  envlib.py  hash_services.py  local_sms_service.py  logger.py  orm_mapper.py  pydantic_config.py  pyjwt_service.py  redis_client.py  redis_publisher.py  settings.py  snowflake_idgen.py  sql_unit_of_work.py
fastup/utils/: envars.py  parsers.py
tests/: conftest.py  test_app.py
tests/adapters/: test_builtin_logger.py  test_database.py  test_envlib.py  test_orm.py
tests/config/: test_parsers.py  test_resolvers.py
tests/core/: test_database.py  test_envlib.py
tests/unit/: test_bootstrap.py  test_main.py
(+102 files in other folders)
