[project]
name = "fastup"
version = "0.1.0"
description = "FastAPI starter kit for clean and scalable API development"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Mohsen Padidar", email = "mxpadidar@gmail.com" },
]

dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "celery>=5.5.3",
    "fastapi>=0.120.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.12.3",
    "pyyaml>=6.0.3",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
  "ty>=0.0.1a25",
  "ruff>=0.14.2",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-asyncio>=1.2.0",
  "httpx>=0.28.1",
]

[tool.uv]
default-groups = ["dev"]

[tool.ty.environment]
python-version = "3.13"

[tool.ruff]
line-length = 88
cache-dir = ".cache/ruff"
exclude = [".cache"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-q --tb=line --maxfail=1"
console_output_style = "count"
log_cli = false
cache_dir = ".cache/pytest"
asyncio_mode = "auto"
# log_cli_level = "INFO"

[tool.coverage.run]
data_file = ".cache/.coverage"

[tool.coverage.html]
directory = ".cache/coverage"

[tool.coverage.report]
omit = ["main.py"]
exclude_also = [
  "raise NotImplementedError",
]
skip_empty = true
skip_covered = true
precision = 2

[tool.alembic]
script_location = "%(here)s/alembic"
prepend_sys_path = ["."]
