[project]
name = "fastup"
version = "0.1.0"
description = "A production-ready FastAPI starter with solid architecture and essential dev tools."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "snowflakekit>=0.1.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-extra-types[phonenumbers]>=2.10.6",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
cache-dir = ".cache/ruff"
exclude = [".cache"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-q --tb=line --maxfail=1"
console_output_style = "count"
log_cli = false
cache_dir = ".cache/pytest"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.coverage.run]
data_file = ".cache/.coverage"

[tool.coverage.html]
directory = ".cache/coverage"

[tool.coverage.report]
skip_empty = true
skip_covered = true
precision = 2
omit = ["main.py", "deps.py", "app.py"]
exclude_also = ["raise NotImplementedError"]

[tool.alembic]
script_location = "%(here)s/alembic"
prepend_sys_path = ["."]
